objects/agf__ADM_Change_List__c.object
<CustomObject>
    <description>Perforce change lists for checking in code changes.  Related to bugs and user stories.</description>
    <fields>
        <fullName>agf__Changelist__c</fullName>
        <description>Link back to the changelist description</description>
        <formula>IF(ISPICKVAL(agf__Source__c, &apos;Perforce&apos;), 



HYPERLINK( &quot;https://build.soma.salesforce.com/build/Perforce/describe?change=&quot; &amp; agf__Perforce_Changelist__c, agf__Perforce_Changelist__c), 



IF(ISPICKVAL(agf__Source__c, &apos;&apos;), 



HYPERLINK( &quot;https://build.soma.salesforce.com/build/Perforce/describe?change=&quot; &amp; agf__Perforce_Changelist__c, agf__Perforce_Changelist__c), 



IF(ISPICKVAL(agf__Source__c, &apos;GitHub&apos;),  HYPERLINK( &quot;https://github.com/&quot; &amp; agf__Perforce_Changelist__c, &quot;github.com/&quot; &amp; agf__Perforce_Changelist__c),


IF(ISPICKVAL(agf__Source__c, &apos;Stash&apos;),  

HYPERLINK( &quot;https://stash.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c, &quot;stash.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c),


HYPERLINK(&quot;https://git.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c, &quot;git.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c)

)


)



)



)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Changelist Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Check_In_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check-in By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NT0000000lhZvMAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Check_In_Date__c</fullName>
        <label>Check-in Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <complianceGroup>PII</complianceGroup>
        <description>An external ID used for syncing between instances.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Local_Check_in_Date__c</fullName>
        <label>Local Check-in Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Perforce_Changelist__c</fullName>
        <description>Reference to Perforce Changelist number</description>
        <label>Changelist #</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release_Name__c</fullName>
        <label>Release Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perforce</fullName>
                    <default>true</default>
                    <label>Perforce</label>
                </value>
                <value>
                    <fullName>GitHub</fullName>
                </value>
                <value>
                    <fullName>Internal Git</fullName>
                </value>
                <value>
                    <fullName>Stash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>agf__ADM_Task__c</referenceTo>
        <relationshipLabel>Change Lists</relationshipLabel>
        <relationshipName>Change_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Username__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work_Number__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <formula>VALUE(RIGHT(agf__Work__r.Name, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipName>WorkChangeLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change List</label>
    <nameField>
        <displayFormat>PF-{0000000}</displayFormat>
        <label>Changelist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>